--- a/ML_2021_set3.ipynb
+++ b/ML_2021_set3.ipynb
@@ -25,8 +25,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1) $$|\\Omega|=2\\frac{3!}{2!}+2\\frac{3!}{3!}=8.$$\n",
-    "\n",
+    "(1) $$|\\Omega|=2\\frac{3!}{2!}+2\\frac{3!}{3!}=8.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(2) $$|F|=\\frac{3!}{2!}+1=4.$$   "
    ]
   },
@@ -34,8 +39,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(3) Sample space - $$\\Omega=\\{\\text{HHH},\\text{HHT},\\text{HTT},\\text{TTT},\\text{THH},\\text{TTH},\\text{THT},\\text{HTH}\\}.$$\n",
-    "\n",
+    "(3) Sample space - $$\\Omega=\\{\\text{HHH},\\text{HHT},\\text{HTT},\\text{TTT},\\text{THH},\\text{TTH},\\text{THT},\\text{HTH}\\}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(4) Event space - $$F=\\{\\text{HHH},\\text{HHT},\\text{THH},\\text{HTH}\\}.$$"
    ]
   },
@@ -46,20 +56,28 @@
     "### Problem 2\n",
     "Show that:\n",
     "\n",
-    "(5) $$P(B) = \\sum_{i} P(B|A_{i}) \\cdot P(A_{i})$$\n",
-    "\n",
-    "for $A_{i}$ being disjoint sets, partitioning the whole sample space $\\left(\\Omega = \\bigcup_{i} A_{i}\\right)$ and\n",
-    "$P(A_{i})>0$ for all $I$"
+    "(5) $$P(B) = \\sum_{i} P(B|A_{i}) \\cdot P(A_{i})$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "(6) $$B=\\bigcup_{i} B \\cap A_{i}$$\n",
-    "\n",
+    "for $A_{i}$ being disjoint sets, partitioning the whole sample space $\\left(\\Omega = \\bigcup_{i} A_{i}\\right)$ and\n",
+    "$P(A_{i})>0$ for all $I$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(6) $$B=\\bigcup_{i} B \\cap A_{i}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Consequently:\n",
     "\n",
     "(7) $$P(B)=\\sum_{i}P(B \\cap A_{i})=\\sum_{i}\\frac{P(B\\cap A_{i})}{P(A_{i})}P(A_{i})=\\sum_{i}P(B|A_{i})P(A_{i}).$$\n",
@@ -86,8 +104,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(9) $$EPE(f) = E_{x,y}[|f(x)-y|] = \\int \\int |f(x)-y| \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int |f(x)-y| \\rho_{y|x} dy\\right) dx.$$\n",
-    "\n",
+    "(9) $$EPE(f) = E_{x,y}[|f(x)-y|] = \\int \\int |f(x)-y| \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int |f(x)-y| \\rho_{y|x} dy\\right) dx.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(10) $$EPE(f) = E_{x,y}[|f(x)-y||x] = E_{x}[E_{y|x}[|f(x)-y||x]].$$"
    ]
   },
@@ -122,9 +145,13 @@
    "source": [
     "The above equation impies that:\n",
     "\n",
-    "(14) $$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1,$$\n",
-    "\n",
-    "\n",
+    "(14) $$2\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1,$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(15) $$2\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\int_{-\\infty}^{\\infty} \\rho_{y|x} dy=1.$$"
    ]
   },
@@ -134,8 +161,13 @@
    "source": [
     "Finally we get:\n",
     "    \n",
-    "(16) $$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
-    "\n",
+    "(16) $$\\int_{-\\infty}^{f(x)}\\rho_{y|x}dy=\\frac{1}{2},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(17) $$\\int_{f(x)}^{\\infty}\\rho_{y|x}dy=\\frac{1}{2},$$\n",
     "\n",
     "which indicates that the most optimal $f(x)$ can be interpreted as median of $\\rho_{y|x}$."
@@ -160,10 +192,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(19) $$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = \\int \\int (f(x)-y)^{2} \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int (f(x)-y)^{2} \\rho_{y|x} dy\\right) dx.$$\n",
-    "\n",
-    "\n",
-    "\n",
+    "(19) $$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = \\int \\int (f(x)-y)^{2} \\rho_{x,y}(x,y)dxdy=\\int \\rho_{x} \\left(\\int (f(x)-y)^{2} \\rho_{y|x} dy\\right) dx.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(20) $$EPE(f) = E_{x,y}[(f(x)-y)^{2}] = E_{x}[E_{y|x}[(f(x)-y)^{2}]].$$"
    ]
   },
@@ -344,7 +379,7 @@
    "source": [
     "1. point\n",
     "\n",
-    "$$\\text{Cov}[x,y]=E[(x-E[x])(y-E[y])]=$$"
+    "(37) $$\\text{Cov}[x,y]=E[(x-E[x])(y-E[y])]=$$"
    ]
   },
   {
@@ -374,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$=E[(x+y-(E[x]+E[y])^{2})]=$$"
+    "(38) $$=E[(x+y-(E[x]+E[y])^{2})]=$$"
    ]
   },
   {
@@ -390,7 +425,7 @@
    "source": [
     "Now we expand the parenthesis of arguments from the statement above:\n",
     "\n",
-    "$$\\text{Var[x+y]}=$$\n",
+    "(39) $\\text{Var[x+y]}=$$\n",
     "$$=E[x^{2}+y^{2}+2xy]+E[E^{2}[x]+E^{2}[y]+2E[x]E[y]]-2E[xE[x]+yE[y]-xE[y]-yE[x]].$$"
    ]
   },
@@ -400,7 +435,7 @@
    "source": [
     "Having expanded the arguments we can proceede with using linearity, we get:\n",
     "\n",
-    "$$\\text{Var[x+y]}=$$\n",
+    "(40) $$\\text{Var[x+y]}=$$\n",
     "$$=E[x^{2}]+E[y^{2}]+2E[xy]+E^{2}[x]+E^{2}[y]+2E[x]E[y]-2E^{2}[x]-2E^{2}[y]-4E[x]E[y].$$"
    ]
   },
@@ -410,7 +445,7 @@
    "source": [
     "Now let us rearrange the terms so that we obtain the formula we were asked to prove:\n",
     "\n",
-    "$$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=$$\n",
+    "(41) $$\\text{Var[x+y]}=(E[x^{2}]-E^{2}[x])+(E[y^{2}]-E^{2}[y])+2(E[xy]-E[x]E[y])=$$\n",
     "$$=\\text{Var}[x]+\\text{Var}[y]+2\\text{Cov}[x,y].$$"
    ]
   },
@@ -439,7 +474,7 @@
    "source": [
     "First of all let us notice that:\n",
     "\n",
-    "$$p(x|y)=\\frac{p(x,y)}{p(x)}.$$"
+    "(42) $$p(x|y)=\\frac{p(x,y)}{p(x)}.$$"
    ]
   },
   {
@@ -449,9 +484,9 @@
     "We have two prime numbers $\\{2,5\\}$ and three even numbers $\\{2,4,6\\}$ in this set.\n",
     "Consequently we have:\n",
     "\n",
-    "$$p(x=1)=\\frac{1}{2},$$\n",
+    "(43) $$p(x=1)=\\frac{1}{2},$$\n",
     "\n",
-    "$$p(x=0)=\\frac{1}{2}.$$"
+    "(44) $$p(x=0)=\\frac{1}{2}.$$"
    ]
   },
   {
@@ -465,28 +500,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(x=1,y=1)=\\frac{1}{6},$$"
+    "(45) $$p(x=1,y=1)=\\frac{1}{6},$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(x=0,y=1)=\\frac{1}{6},$$"
+    "(46) $$p(x=0,y=1)=\\frac{1}{6},$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(x=0,y=0)=\\frac{2}{6},$$"
+    "(47) $$p(x=0,y=0)=\\frac{2}{6},$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(x=1,y=0)=\\frac{2}{6}.$$"
+    "(48) $$p(x=1,y=0)=\\frac{2}{6}.$$"
    ]
   },
   {
@@ -495,13 +530,13 @@
    "source": [
     "Next, we can calculate mariginal PMF of x:\n",
     "\n",
-    "$$p_{x}(k)=\\sum_{r} p(x=k,y=r)= p(x=k, y=0) + p(x=k|y=1),$$\n",
+    "(49) $$p_{x}(k)=\\sum_{r} p(x=k,y=r)= p(x=k, y=0) + p(x=k|y=1),$$\n",
     "\n",
     "which yields:\n",
     "\n",
-    "$$p_{x}(0)=\\frac{1}{2},$$\n",
+    "(50) $$p_{x}(0)=\\frac{1}{2},$$\n",
     "\n",
-    "$$p_{x}(1)=\\frac{1}{2}.$$"
+    "(51) $$p_{x}(1)=\\frac{1}{2}.$$"
    ]
   },
   {
@@ -510,7 +545,7 @@
    "source": [
     "Similarly, we can calculate mariginal PMF of y:\n",
     "\n",
-    "$$p_{y}(k)=\\sum_{r} p(x=r, y=k)= p(x=0, y=k) + p(x=1,y=k).$$"
+    "(52) $$p_{y}(k)=\\sum_{r} p(x=r, y=k)= p(x=0, y=k) + p(x=1,y=k).$$"
    ]
   },
   {
@@ -519,9 +554,9 @@
    "source": [
     "which yields:\n",
     "\n",
-    "$$p_{y}(0)=\\frac{1}{2},$$\n",
+    "(53)$$p_{y}(0)=\\frac{1}{2},$$\n",
     "\n",
-    "$$p_{y}(1)=\\frac{1}{2}.$$"
+    "(54)$$p_{y}(1)=\\frac{1}{2}.$$"
    ]
   },
   {
@@ -530,7 +565,7 @@
    "source": [
     "Now lets calculate conditional PMF:\n",
     "    \n",
-    "$$p(y=1|x=1)=\\frac{p(x=1,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3},$$"
+    "(56) $$p(y=1|x=1)=\\frac{p(x=1,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3},$$"
    ]
   },
   {
@@ -538,22 +573,21 @@
    "metadata": {},
    "source": [
     "\n",
-    "$$p(y=0|x=0)=\\frac{p(x=0,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
+    "(57) $$p(y=0|x=0)=\\frac{p(x=0,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$p(y=0|x=1)=\\frac{p(x=1,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
+    "(58) $$p(y=0|x=1)=\\frac{p(x=1,y=0)}{p(x=0)}=\\frac{\\frac{2}{6}}{\\frac{1}{2}}=\\frac{2}{3},$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "$$p(y=1|x=0)=\\frac{p(x=0,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3}.$$"
+    "(59) $$p(y=1|x=0)=\\frac{p(x=0,y=1)}{p(x=1)}=\\frac{\\frac{1}{6}}{\\frac{1}{2}}=\\frac{1}{3}.$$"
    ]
   },
   {
@@ -563,12 +597,12 @@
     "$h(k)=\\sum_r p(y=r,x=k)$ is a proper probability function if\n",
     "\n",
     "\n",
-    "$$\\sum_{k}\\sum_r p(y=r,x=k)=1$$.\n",
+    "(60) $$\\sum_{k}\\sum_r p(y=r,x=k)=1.$$\n",
     "\n",
-    "If we look at the () we will see that this is indeed true:\n",
+    "If we look at (45-48) we will see that this is true:\n",
     "\n",
     "\n",
-    "$$\\sum_{k}\\sum_r p(y=r,x=k)=p(x=1,y=1)+p(x=0,y=0)+p(x=1,y=0)+p(x=0,y=1)=\\frac{1}{6}+\\frac{1}{6}+\\frac{2}{6}+\\frac{2}{6}=1.$$"
+    "(61) $$\\sum_{k}\\sum_r p(y=r,x=k)=p(x=1,y=1)+p(x=0,y=0)+p(x=1,y=0)+p(x=0,y=1)=\\frac{1}{6}+\\frac{1}{6}+\\frac{2}{6}+\\frac{2}{6}=1.$$"
    ]
   },
   {
@@ -595,14 +629,14 @@
     "In order to solve this problem we can use the definition of expectation value from the lecture and the values of probability mass function values obtained in the previous task.\n",
     "\n",
     "\n",
-    "$$E[y|1]=\\sum_r r\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3$$"
+    "(62) $$E[y|1]=\\sum_r r\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$E[y|0]=\\sum_r r\\cdot  p(y=r|x=0)=0 \\cdot p(y=0|x=0) + p(y=1|x=0)=1/3$$"
+    "(63) $$E[y|0]=\\sum_r r\\cdot  p(y=r|x=0)=0 \\cdot p(y=0|x=0) + p(y=1|x=0)=1/3.$$"
    ]
   },
   {
@@ -611,7 +645,7 @@
    "source": [
     "Let us notice that:\n",
     "    \n",
-    "$$\\text{Var}[y|k]=E[y^{2}|k]-\\left(E[y|k]\\right)^{2}.$$"
+    "(64) $$\\text{Var}[y|k]=E[y^{2}|k]-\\left(E[y|k]\\right)^{2}.$$"
    ]
   },
   {
@@ -620,14 +654,14 @@
    "source": [
     "We are looking for $\\text{Var}[y|0]$, $\\text{Var}[y|1]$:\n",
     "    \n",
-    "$$\\text{Var}[y|1]=E[y^{2}|1]-\\left(E[y|1]\\right)^{2}$$"
+    "(65) $$\\text{Var}[y|1]=E[y^{2}|1]-\\left(E[y|1]\\right)^{2},$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\text{Var}[y|0]=E[y^{2}|0]-\\left(E[y|0]\\right)^{2}$$"
+    "(66) $$\\text{Var}[y|0]=E[y^{2}|0]-\\left(E[y|0]\\right)^{2}.$$"
    ]
   },
   {
@@ -636,14 +670,14 @@
    "source": [
     "So the only thing left to do is to find $E[y^{2}|1]$ and $E[y^{2}|0]$:\n",
     "\n",
-    "$$E[y^{2}|1]=\\sum_r r^{2}\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3$$"
+    "(67) $$E[y^{2}|1]=\\sum_r r^{2}\\cdot p(y=r|x=1)= 0 \\cdot p(y=0|x=1) + p(y=1|x=1)=1/3,$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$E[y^{2}|0]=\\sum_r r^{2}\\cdot  p(y=r|x=0)=0 \\cdot p(y=0|x=0) + p(y=1|x=0)=1/3$$"
+    "(68) $$E[y^{2}|0]=\\sum_r r^{2}\\cdot  p(y=r|x=0)=0 \\cdot p(y=0|x=0) + p(y=1|x=0)=1/3.$$"
    ]
   },
   {
@@ -652,7 +686,7 @@
    "source": [
     "After all of these steps we can finally write the solution:\n",
     "\n",
-    "$$\\text{Var}[y|1]=\\text{Var}[y|0]=\\frac{2}{9}$$"
+    "(69) $$\\text{Var}[y|1]=\\text{Var}[y|0]=\\frac{2}{9}$$"
    ]
   }
  ],
