--- a/assignment_till_27.11.ipynb
+++ b/assignment_till_27.11.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -173,15 +173,15 @@
     "    prod=[]\n",
     "    for i in range(len(X)):\n",
     "        prod.append(X[i]*Y[i])    \n",
-    "    cov = mean(prod)-mean(X)*mean(Y)\n",
+    "    cov = expval(prod)-expval(X)*expval(Y)\n",
     "    return cov\n",
     "\n",
     "def std_dev(X):\n",
-    "    std = np.sqrt(variance1(X))\n",
+    "    std = np.sqrt(variance(X))\n",
     "    return std\n",
     "\n",
     "def pears_rho(X,Y):\n",
-    "    rho = covariance1(X,Y)/(std_dev(X)*std_dev(Y))\n",
+    "    rho = covariance(X,Y)/(std_dev(X)*std_dev(Y))\n",
     "    return rho    "
    ]
   },
@@ -671,19 +671,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data)\n",
+    "index = df.index\n",
+    "columns = df.columns\n",
+    "values = df.values\n",
+    "#print(\"index=\",index)\n",
+    "#print(\"columns=\",columns)\n",
+    "#print(\"values\",values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-37-e39f077c1289>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mE_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexpval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mE_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexpval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mVar_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvariance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mVar_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvariance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mCov_xy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcovariance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-35-7859fe96b1dd>\u001b[0m in \u001b[0;36mvariance\u001b[1;34m(X)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0msquare\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0mdiff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0msquare\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdiff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mvar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msquare\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mean' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E[X]= 9.0 E[Y]= 7.50068181818182 Var(X)= 10.0 Var(Y)= 3.7501745351239677 Cov(X,Y)= 4.999318181818168 rho_XY= 0.8163662427614676\n"
      ]
     }
    ],
@@ -698,74 +708,6 @@
     "rho_xy = pears_rho(x,y)\n",
     "\n",
     "print(\"E[X]=\",E_x,\"E[Y]=\",E_y,\"Var(X)=\",Var_x,\"Var(Y)=\",Var_y,\"Cov(X,Y)=\",Cov_xy,\"rho_XY=\",rho_xy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "index= RangeIndex(start=0, stop=44, step=1)\n",
-      "columns= Index(['x', 'y', 'dataSet'], dtype='object')\n",
-      "values [[10.    8.04  0.  ]\n",
-      " [ 8.    6.95  0.  ]\n",
-      " [13.    7.58  0.  ]\n",
-      " [ 9.    8.81  0.  ]\n",
-      " [11.    8.33  0.  ]\n",
-      " [14.    9.96  0.  ]\n",
-      " [ 6.    7.24  0.  ]\n",
-      " [ 4.    4.26  0.  ]\n",
-      " [12.   10.84  0.  ]\n",
-      " [ 7.    4.82  0.  ]\n",
-      " [ 5.    5.68  0.  ]\n",
-      " [10.    9.14  1.  ]\n",
-      " [ 8.    8.14  1.  ]\n",
-      " [13.    8.74  1.  ]\n",
-      " [ 9.    8.77  1.  ]\n",
-      " [11.    9.26  1.  ]\n",
-      " [14.    8.1   1.  ]\n",
-      " [ 6.    6.13  1.  ]\n",
-      " [ 4.    3.1   1.  ]\n",
-      " [12.    9.13  1.  ]\n",
-      " [ 7.    7.26  1.  ]\n",
-      " [ 5.    4.74  1.  ]\n",
-      " [10.    7.46  2.  ]\n",
-      " [ 8.    6.77  2.  ]\n",
-      " [13.   12.74  2.  ]\n",
-      " [ 9.    7.11  2.  ]\n",
-      " [11.    7.81  2.  ]\n",
-      " [14.    8.84  2.  ]\n",
-      " [ 6.    6.08  2.  ]\n",
-      " [ 4.    5.39  2.  ]\n",
-      " [12.    8.15  2.  ]\n",
-      " [ 7.    6.42  2.  ]\n",
-      " [ 5.    5.73  2.  ]\n",
-      " [ 8.    6.58  3.  ]\n",
-      " [ 8.    5.76  3.  ]\n",
-      " [ 8.    7.71  3.  ]\n",
-      " [ 8.    8.84  3.  ]\n",
-      " [ 8.    8.47  3.  ]\n",
-      " [ 8.    7.04  3.  ]\n",
-      " [ 8.    5.25  3.  ]\n",
-      " [19.   12.5   3.  ]\n",
-      " [ 8.    5.56  3.  ]\n",
-      " [ 8.    7.91  3.  ]\n",
-      " [ 8.    6.89  3.  ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.DataFrame(data)\n",
-    "index = df.index\n",
-    "columns = df.columns\n",
-    "values = df.values\n",
-    "print(\"index=\",index)\n",
-    "print(\"columns=\",columns)\n",
-    "print(\"values\",values)"
    ]
   }
  ],
