--- a/ML_2021_set4.ipynb
+++ b/ML_2021_set4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,9 @@
     "import matplotlib.pyplot as plt\n",
     "#to download file\n",
     "import urllib.request\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -20,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solutions to Modern Data Science Problems (probelms till 20.11)\n",
+    "# Solutions to Modern Data Science Problems (probelms till 27.11)\n",
     "by *Mateusz Kmieć* "
    ]
   },
@@ -56,6 +59,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean distance for 1-D feature space:  0.0094 = 1/106.\n",
+      "Mean distance for 2-D feature space:  0.0971 = 1/sqrt(106).\n",
+      "Mean distance for 3-D feature space:  0.2113 = 1/(106)^(1/3).\n",
+      "Mean distance for 10-D feature space: 0.6273 = 1/(106)^(1/10).\n",
+      "\n",
+      "Naturally, in the case of 10-D feature space we would need (106)^10 points\n",
+      "to have the same average distance between points as for 1-D.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def distance(x,y):\n",
+    "    xx=np.array(x)\n",
+    "    yy=np.array(y)\n",
+    "    return np.sqrt(np.sum(np.square(xx-yy)))\n",
+    "\n",
+    "\n",
+    "def mean_distance(x, metric=distance):    \n",
+    "    distances=np.array([distance(x[2*i],x[2*i+1]) for i in range(int(x.size*0.5))])\n",
+    "    return np.mean(distances)\n",
+    "\n",
+    " \n",
+    "X1=np.arange(0,1,1/106)               #1-D N=106\n",
+    "print(\"Mean distance for 1-D feature space:  {:.4f} = 1/106.\".format(mean_distance(X1)))\n",
+    "\n",
+    "\n",
+    "xx2=np.arange(0,1,1/np.sqrt(106))     #2-D N=sqrt(106)*sqrt(106)=106\n",
+    "X2=np.array(xx2)\n",
+    "\n",
+    "print(\"Mean distance for 2-D feature space:  {:.4f} = 1/sqrt(106).\".format(mean_distance(X2)))\n",
+    "\n",
+    "\n",
+    "xx3=np.arange(0,1,1/pow(106,1/3))     #3-D N=((106)^{1/3})^{3}=106\n",
+    "X3=np.array(xx3)\n",
+    "\n",
+    "print(\"Mean distance for 3-D feature space:  {:.4f} = 1/(106)^(1/3).\".format(mean_distance(X3)))\n",
+    "\n",
+    "\n",
+    "xx10=np.arange(0,1,1/pow(106,1/10))     #10-D N=((106)^{1/10})^{10}=106\n",
+    "X10=np.array(xx10)\n",
+    "\n",
+    "print(\"Mean distance for 10-D feature space: {:.4f} = 1/(106)^(1/10).\".format(mean_distance(X10)))\n",
+    "\n",
+    "print(\"\\nNaturally, in the case of 10-D feature space we would need (106)^10 points\\nto have the same average distance between points as for 1-D.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,7 +121,154 @@
     "\n",
     "Derive OLS solution for simple linear regression model \n",
     "\n",
-    "$$f_{θ}(x) = θ_{1} \\cdot x + θ_{0}.$$"
+    "(1) $$f_{\\bar{\\theta}}(x_{i}) = \\bar{\\theta}_{1}x_{i}+\\bar{\\theta}_{0},$$\n",
+    "\n",
+    "where $i$ is the data pont index and $\\bar{\\theta}$ is the following vector:\n",
+    "\n",
+    "(2) $$\\bar{\\theta}=\\left[\\theta_{0},\\theta_{1}\\right].$$\n",
+    "\n",
+    "Consequently we can write (1) as:\n",
+    "\n",
+    "(3) $$f_{\\bar{\\theta}}(X)=\\bar{\\theta}^{T}.X=X^{T}.\\bar{\\theta},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where\n",
+    "\n",
+    "(3) $$X=\\begin{bmatrix}\n",
+    "    \\mathbb{1} \\\\\n",
+    "    x_{i}\n",
+    "\\end{bmatrix}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First let us assume that the cost functino is:\n",
+    "\n",
+    "(4) $$L(f_{\\bar{\\theta}}(X),Y)=\\left(f_{\\bar{\\theta}}(X)-Y\\right)^{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cost function can be written as:\n",
+    "\n",
+    "(5) $$E_{T}\\left(L(f_{\\bar{\\theta}}(X),Y)\\right)=\\frac{1}{N}\\sum_{i}^{N}\\left(f_{\\bar{\\theta}}(x_{i})-y_{i}\\right)^{2},$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given (1), the above equation can be written in the form:\n",
+    "    \n",
+    "(6) $$E_{T}\\left(L(f_{\\bar{\\theta}}(X),Y)\\right)=\\frac{1}{N}\\sum_{i}^{N}\\left((\\bar{\\theta}_{1}x_{i} + \\bar{\\theta}_{0})-y_{i}\\right)^{2}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can write equation (6) in a concise form:\n",
+    "    \n",
+    "(7) $$E_{T}\\left(L(f_{\\bar{\\theta}}(X),Y)\\right)=\\frac{1}{N}\\left(X.\\bar{\\theta}-Y\\right)^{T}\\left(Y-X.\\bar{\\theta}\\right).$$    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The OLS solution to linear regression problem can be obtained as from the optimization of the cost function $E_{T}$ with respect to $\\bar{\\theta}$:\n",
+    "    \n",
+    "(8) $$\\nabla_{\\bar{\\theta}} E_{T}\\left(L(f_{\\bar{\\theta}}(X),Y)\\right)=0.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The gradient of the cost function can be expressed as:\n",
+    "    \n",
+    "(9) $$\\nabla_{\\bar{\\theta}} E_{T}\\left(L(f_{\\bar{\\theta}}(X),Y)\\right)=\\frac{1}{N} 2X^{T}\\left(X.\\theta-Y\\right)=0.$$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which can be solved analitically in a closed form:\n",
+    "    \n",
+    "(10) $$\\bar{\\theta}=\\left(X^{T}.X\\right)^{-1}X^{T}Y.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------\n",
+      "ANALYTICAL SOLUTION\n",
+      "theta:\n",
+      " [[-180.92401772]\n",
+      " [   1.61814247]]\n",
+      "\n",
+      "intercept: -180.9\n",
+      "\n",
+      "slope: 1.618\n",
+      "\n",
+      "Error (cost function): 372.3\n",
+      "\n",
+      "\n",
+      "\n",
+      "---------------------------------------------\n",
+      "SKLEARN SOLUTION\n",
+      "\n",
+      "intercept: -180.9240177163372.\n",
+      "\n",
+      "slope: 1.6181424688789716.\n",
+      "\n",
+      "Error (cost function): 372.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "0#Linear regression analitically\n",
+    "xx = np.array([188, 181, 197, 168, 167, 187, 178, 194, 140, 176, 168, 192, 173, 142, 176]).reshape(-1, 1).reshape(15,1)\n",
+    "x = np.asmatrix(np.c_[np.ones((15,1)),xx])\n",
+    "\n",
+    "y = np.array([141, 106, 149, 59, 79, 136, 65, 136, 52, 87, 115, 140, 82, 69, 121]).reshape(-1, 1).reshape(15,1)\n",
+    "\n",
+    "theta = np.linalg.inv(x.T*x)*x.T*y\n",
+    "error=(((x@theta-y).T)@(x@theta-y))*(1/y.shape[0])\n",
+    "print(\"---------------------------------------------\") \n",
+    "print(\"ANALYTICAL SOLUTION\")\n",
+    "print(\"theta:\\n {}\\n\".format(theta))\n",
+    "print(\"intercept: {:.4g}\\n\".format(theta[0,0]))\n",
+    "print(\"slope: {:.4g}\\n\".format(theta[1,0]))\n",
+    "print(\"Error (cost function): {:.4g}\\n\".format(error[0,0]))\n",
+    "\n",
+    "\n",
+    "#Linear regression sklearn.\n",
+    "model = LinearRegression()\n",
+    "model = LinearRegression().fit(xx, y)\n",
+    "y_pred = model.predict(xx)\n",
+    "y_true = y\n",
+    "\n",
+    "print(\"\\n\\n---------------------------------------------\")\n",
+    "print(\"SKLEARN SOLUTION\")\n",
+    "print(\"\\nintercept: {}.\".format(model.intercept_[0]))\n",
+    "print(\"\\nslope: {}.\".format(model.coef_[0,0]))\n",
+    "print('\\nError (cost function): {:.4g}'.format(mean_squared_error(y_true,y_pred)))\n"
    ]
   },
   {
@@ -611,18 +816,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
