generalized dataset reading.

--- a/assignment_till_18.12.ipynb
+++ b/assignment_till_18.12.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('x08.csv', <http.client.HTTPMessage at 0x1cdf8fad1c0>)"
+       "('x08.csv', <http.client.HTTPMessage at 0x2be40382100>)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4      5      1248000           19.2         7.3     24.8"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -369,7 +369,7 @@
        "max    20.00000  7.895000e+06      26.300000    9.300000  40.700000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,16 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1cdf90a05b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2be40439760>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 17,
    "metadata": {
     "code_folding": []
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,20 +673,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.9\n",
-      "12.7\n",
+      "[643000, 2793000, 854000, 595000]\n",
+      "13.4\n",
       "    index  inhabitants  incomeBelow5k  unemployed  murders\n",
-      "5       6       643000           16.5         5.9     12.7\n",
-      "7       8      1531000           21.3         7.6     35.7\n",
-      "9      10       749000           14.3         6.4      9.6\n",
-      "13     14       741000           24.7         8.6     36.2\n"
+      "1       2       643000           20.5         6.4     13.4\n",
+      "12     13      2793000           19.1         5.8     15.7\n",
+      "15     16       854000           24.9         8.3     28.9\n",
+      "18     19       595000           20.2         8.4     21.7\n",
+      "xTrain [[749000, 643000, 741000, 1248000, 7895000, 3353000, 716000, 762000, 635000, 625000, 587000, 692000, 713000, 1964000, 1531000, 921000], [14.3, 16.5, 24.7, 19.2, 18.1, 16.9, 17.9, 23.1, 26.3, 18.6, 16.5, 16.5, 17.2, 20.2, 21.3, 22.4], [6.4, 5.9, 8.6, 7.3, 6.0, 6.7, 6.7, 7.4, 9.3, 6.5, 6.2, 5.3, 4.9, 6.4, 7.6, 8.6]]\n",
+      "xTrain[0] [749000, 643000, 741000, 1248000, 7895000, 3353000, 716000, 762000, 635000, 625000, 587000, 692000, 713000, 1964000, 1531000, 921000]\n"
      ]
     }
    ],
@@ -696,21 +698,29 @@
     "# we also randomly shuffle the content\n",
     "trainingSet=data.sample(frac=fraction)\n",
     "validationSet=data.drop(trainingSet.index)\n",
+    "xTrain=[]\n",
+    "xValid=[]\n",
     "\n",
-    "#There was a mistake here in the instructor's code, we corrected it see below:\n",
-    "xTrain = trainingSet.iloc[:, 3].values.tolist()\n",
+    "for i in range(1,4):    \n",
+    "    xTrain.append(trainingSet.iloc[:, i].values.tolist())\n",
+    "    xValid.append(validationSet.iloc[:, i].values.tolist())\n",
+    "\n",
     "yTrain = trainingSet.iloc[:, 4].values.tolist()\n",
-    "xValid = validationSet.iloc[:, 3].values.tolist()\n",
-    "yValid = validationSet.iloc[:, 4].values.tolist() #unemployed vs murders\n",
+    "yValid = validationSet.iloc[:, 4].values.tolist()\n",
     "\n",
     "print(xValid[0])\n",
     "print(yValid[0])\n",
-    "print(validationSet.head())"
+    "print(validationSet.head())\n",
+    "#print(trainingSet.head())\n",
+    "#print(validationSet.iloc[:, 2].values.tolist())\n",
+    "#print(trainingSet.iloc[:, 2].values.tolist())\n",
+    "print(\"xTrain\",xTrain)\n",
+    "#print(\"xTrain[0]\",xTrain[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,15 +733,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18.270947169329077]\n",
-      "[23.1540373119503, 12.534705892976444, 18.906304744360764, 23.861992739881895, 17.490393888497582, 16.782438460565995, 18.906304744360764, 30.233591591266215, 8.994928753318494, 6.163107041592131, 30.941547019197802, 37.31314587058213, 15.366527604702807, 13.950616748839625, 32.35745787506099, 16.782438460565995]\n"
+      "Training error for data 1 = 106.61021496265127\n",
+      "Test error for data 1 = 35.27151992018523\n",
+      "Training error for data 2 = 26.735652899239554\n",
+      "Test error for data 2 = 29.773018597502425\n",
+      "Training error for data 3 = 22.434852945999562\n",
+      "Test error for data 3 = 27.161158640953467\n"
      ]
     }
    ],
@@ -741,21 +755,18 @@
     "    trainError=[]\n",
     "    validError=[]\n",
     "    model = MySimpleLinearRegression()\n",
-    "    model.fit(data3,data4)\n",
-    "    trainPredictions = [model.predict(x) for x in xTrain]\n",
-    "    validationPredictions = [model.predict(x) for x in xValid]    \n",
-    "    trainError.append(meanSquaredError(trainPredictions,yTrain))\n",
-    "    validError.append(meanSquaredError(validationPredictions,yValid))\n",
+    "    datasetList = [data1,data2,data3]\n",
+    "    for i in range(0,3):\n",
+    "        model.fit(datasetList[i],data4)\n",
+    "        trainPredictions = [model.predict(x) for x in xTrain[i]] #xTrain[i] = list containing the xTrain for a given dataset\n",
+    "        validationPredictions = [model.predict(x) for x in xValid[i]]   \n",
+    "        trainError.append(meanSquaredError(trainPredictions,yTrain))\n",
+    "        validError.append(meanSquaredError(validationPredictions,yValid))\n",
+    "        print(\"Training error for data\", i+1,\"=\",trainError[i])\n",
+    "        print(\"Test error for data\", i+1,\"=\",validError[i])\n",
     "\n",
-    "print(trainError)\n",
-    "print(trainPredictions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To obtain training and test errors for each dataset (data1,data2,data3), we only need to change the selected column in xTrain and xValid from 3 = 'unemployed' to 1 = 'inhabitants' or 2 = 'incomeBelow5k'."
+    "#print(\"trainError\",trainError)\n",
+    "#print(\"trainPredictions\",validError)"
    ]
   },
   {
