--- a/assignment_till_18.12.ipynb
+++ b/assignment_till_18.12.ipynb
@@ -770,6 +770,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We consider a linear regression model. Let’s assume that the error model is additive $y = f(x) + \\epsilon$ , and errors have Gaussian distribution with 0 mean ($E[\\epsilon] =0$) and variance ($Var[\\epsilon] =\\sigma^2$). Show that the MLE approach leads to the same minimization problem as OLS solution for the quadratic loss function $L(Y,f(X))= (Y -f(X))^2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the MLE method\n",
+    "$$\\theta_{MLE}=argmax[\\log(L(\\theta;x)]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We assume the following model for the data: $y = \\theta_0^{true}+\\theta_1^{true}x+\\epsilon$ and define the residual $f(x^i)-y^i=r^i$. We then consider one fixed point from the training sample $x^i = x^0$. The pdf reads\n",
+    "$$pdf(y|x=x^0,\\theta_0^t,\\theta_1^t) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}}\\exp{\\bigg\\{-\\frac{[y-(\\theta_0^t+\\theta_1^t x^0)]^2}{2\\sigma^2}\\bigg\\}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The likelihood function reads\n",
+    "$$L(\\theta_0,\\theta_1)\\equiv pdf(y|x=x^0,\\theta_0,\\theta_1)\n",
+    "$$\n",
+    "Since for a pdf is valid\n",
+    "$$pdf(y_1...y_N)=\\prod_{i=1}^N pdf(y^i) $$\n",
+    "the likelihood function becomes\n",
+    "$$L(\\theta_0,\\theta_1)= \\prod_{i=1}^N L_i(\\theta_0,\\theta_1) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\log L = \\log \\prod_{i=1}^N L_i(\\theta_0,\\theta_1) = \\sum_{i=1}^N \\log \\bigg\\{\\frac{1}{\\sqrt{2\\pi\\sigma^2}}\\exp{\\bigg\\{-\\frac{[y^i-(\\theta_0^t+\\theta_1^t x^i)]^2}{2\\sigma^2}\\bigg\\}} \\bigg\\}= \\sum_{i=1}^N \\bigg\\{\\log \\bigg(\\frac{1}{\\sqrt{2\\pi\\sigma^2}}\\bigg) -\\frac{[y^i-(\\theta_0^t+\\theta_1^t x^i)]^2}{2\\sigma^2}\\bigg\\}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The MLE method consists in finding $\\theta_0$, $\\theta_1$ for which $\\log L$ is maximum, which is equivalent to finding $\\theta_i$ for which\n",
+    "$$ \\sum_{i=1}^N[y^i-(\\theta_0^t+\\theta_1^t x^i)]^2$$\n",
+    "is minimum. However, $argmin \\sum_{i=1}^N[y^i-(\\theta_0^t+\\theta_1^t x^i)]^2$ is also the solution that OLS method gives for linear regression assuming Gaussian distribution of the random error (QED)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
