--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -29,17 +29,22 @@
     "### Problem 35\n",
     "We consider two models for classification: (1) “flexible” (e.g. kNN) (2) “rigid ” (e.g. linear). Discuss which would you typically choose in those situations:\n",
     "* A small number of training samples N\n",
+    "\n",
+    "*Rigid* \n",
+    "\n",
     "* A large number of features\n",
+    "\n",
+    "*Rigid* \n",
+    "\n",
     "* A large number of training samples N\n",
-    "* Highly non-linear behavior"
+    "\n",
+    "*Flexible*\n",
+    "\n",
+    "* Highly non-linear behavior\n",
+    "\n",
+    "\n",
+    "*Flexible*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -169,20 +174,35 @@
     "We consider a classification model with some regularization scheme. Which statements\n",
     "are true? Justify your choice.\n",
     "* Adding regularization would typically lower the training error\n",
+    " \n",
+    "FALSE \n",
+    "\n",
     "* Adding new features to your model would make the training error higher or the same\n",
+    "\n",
+    "FLASE/TRUE\n",
+    "\n",
     "* Adding regularization would typically lower the test error\n",
+    "\n",
+    "TRUE\n",
+    "\n",
     "* Adding regularization can cause overfitting of your model\n",
+    "\n",
+    "FALSE\n",
+    "\n",
     "* Using a large value of the lambda parameter can cause the overfitting of your model\n",
+    "\n",
+    "FALSE\n",
+    "\n",
+    "\n",
     "* Adding regularization can introduce the bias to your model\n",
-    "* Adding regularization can make the training error higher\n"
+    "\n",
+    "TRUE\n",
+    "\n",
+    "* Adding regularization can make the training error higher\n",
+    "\n",
+    "\n",
+    "TRUE"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -197,7 +217,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "http://www.ai.mit.edu/courses/6.892/lecture8-html/sld015.htm\n"
+   ]
   },
   {
    "cell_type": "markdown",
