--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -213,12 +213,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "http://www.ai.mit.edu/courses/6.892/lecture8-html/sld015.htm\n"
+    "http://www.ai.mit.edu/courses/6.892/lecture8-html/sld015.html\n"
    ]
   },
   {
