--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -61,7 +61,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pretty standard problem surely there is a solution out there!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +81,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "PMF-calculate frequency\n",
+    "\n",
+    "Likelihood-we have all data to calculate that look at the definition\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +101,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "P(D|theta)=P(theta|D) when P(theta)=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,7 +136,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "easy variance-bias treadeoff"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +156,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "easy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,7 +177,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://bjlkeng.github.io/posts/probabilistic-interpretation-of-regularization/"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +256,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "easy"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +276,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Lecture 7 pg .34"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,7 +297,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ":("
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,7 +318,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ":("
+   ]
   }
  ],
  "metadata": {
