--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -57,10 +57,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "pretty standard problem surely there is a solution out there!"
    ]
@@ -247,12 +245,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "P(D|theta)=P(theta|D) when P(theta)=1"
+    "In lecture 6 slide 18 it was stated that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(3) $$\\Theta_{MAP}=\\text{argmax}(f(\\theta|x))=\\text{argmax}(f(x|\\theta)\\cdot f(\\theta)).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(4) $$\\Theta_{MLE}=\\text{argmax}(f(x|\\theta)).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consequently, $\\Theta_{MAP}=\\Theta_{MLE}$ when $f(\\theta)=1$."
    ]
   },
   {
@@ -260,16 +277,24 @@
    "metadata": {},
    "source": [
     "### Problem 39\n",
-    "We want to check if the coin is fair, we estimate the frequency of heads. Calculate the MAP maximum value estimator, when the prior distribution is described by the beta function\n",
-    "$$\\text{pmf}(p|\\alpha, \\beta) = (\\alpha-1)! \\cdot \\frac{( \\beta-1)!}{(\\alpha+ \\beta -1)!} \\cdot p^{\\alpha-1} \\cdot (1-p)^{\\beta-1}$$"
+    "We want to check if the coin is fair, we estimate the frequency of heads. Calculate the MAP maximum value estimator, when the prior distribution is described by the beta function"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "(5) $$\\text{pmf}(p|\\alpha, \\beta) = (\\alpha-1)! \\cdot \\frac{( \\beta-1)!}{(\\alpha+ \\beta -1)!} \\cdot p^{\\alpha-1} \\cdot (1-p)^{\\beta-1}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Bayes theorem gives:\n",
+    "\n",
+    "(6) $$\\text{posterior distribution} \\sim \\text{observation}  \\cdot  \\text{prior distribution}.$$"
+   ]
   },
   {
    "cell_type": "markdown",
